Fixed styling gap at filters in overview

--- a/server/client/src/App.scss
+++ b/server/client/src/App.scss
@@ -384,6 +384,9 @@ form {
             padding-top: 30px;
             margin: 0;
         }
+        .dropdown-menu {
+            top: 87%;
+        }
 
     }
     .chart-time {
